E.03 - hardware keyboard emulator (Arduino), better drag
1. Внешний блок - эмулятор клавиатуры, построенный на Arduino Leonardo.
Некоторые программы, которые отказывались работать с программной
клавиатурой, теперь работают.
2. Настройки скорости эмуляции мыши, в некоторых случаях исправляет
нерабочий Drag

--- a/source/bkb32e.vcxproj
+++ b/source/bkb32e.vcxproj
@@ -201,6 +201,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AirMouse.h" />
+    <ClInclude Include="BKBCOM9Kbd.h" />
     <ClInclude Include="BKBgdi.h" />
     <ClInclude Include="BKBHookProc.h" />
     <ClInclude Include="BKBMetricsWnd.h" />
@@ -230,6 +231,7 @@
   <ItemGroup>
     <ClCompile Include="AirMouse.cpp" />
     <ClCompile Include="BKB001.cpp" />
+    <ClCompile Include="BKBCOM9Kbd.cpp" />
     <ClCompile Include="BKBgdi.cpp" />
     <ClCompile Include="BKBHookProc.cpp" />
     <ClCompile Include="BKBMetricsWnd.cpp" />
