--- a/source/bkb32e.vcxproj.filters
+++ b/source/bkb32e.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClInclude Include="SerialComm.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="BKBCOM9Kbd.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BKB001.cpp">
@@ -182,6 +185,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="SerialComm.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="BKBCOM9Kbd.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
