F.03 - Delays in mouse emulation
In some cases clicks do not work without delays in mouse emulation. Can be switched on/off in settings.

--- a/source/bkb32f.vcxproj
+++ b/source/bkb32f.vcxproj
@@ -130,6 +130,10 @@
     <ClCompile Include="TranspWnd.cpp" />
     <ClCompile Include="WheelChair.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="bell.bmp" />
+    <Image Include="icon1.ico" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
